--- a/css/CastVideos.css
+++ b/css/CastVideos.css
@@ -1,7 +1,3 @@
-html {
-  --progress-bar-width: 700px;
-}
-
 body {
   background-color: #F2F2F2;
   font-family: 'Roboto', "OpenSans", "Verdana", Georgia, Serif;
@@ -15,6 +11,7 @@ body {
   display: none;
   transition: opacity 0 2s;
   -webkit-transition: opacity 0 2s;
+  /* Safari */
 }
 
 #top_header_bar {
@@ -109,7 +106,7 @@ body {
   margin-top: 20px;
   margin-bottom: 0px;
   width: 960px;
-  height: 520px;
+  height: 536px;
 }
 
 #video_image_overlay {
@@ -124,6 +121,7 @@ body {
     rgba(0, 0, 0, 0) 72%,
     rgba(0, 0, 0, 0) 100%);
   z-index: 0;
+  position: absolute;
   display: none;
 }
 
@@ -144,7 +142,7 @@ body {
   float: left;
   width: 940px;
   height: 116px;
-  margin: 5px 0px 0px 40px;
+  margin: -4px 0px 0px 40px;
   padding: 10px;
   opacity: 0.9;
   background-color: #DDE0E5;
@@ -162,30 +160,24 @@ body {
 
 #media_subtitle {
   float: left;
-  width: 80%;
-  margin: 10px;
-  font-size: 12px;
-  font-family: 'Roboto', "Open Sans", "Verdana", Georgia, Serif;
-}
-
-#feature_toggle_container {
-  clear: left;
-  float: left;
-  margin: 10px;
-  font-size: 12px;
-  font-family: 'Roboto', "Open Sans", "Verdana", Georgia, Serif;
-}
-
-radio {
-  float: left;
   margin: 13px 0px 0px 30px;
   padding: 0px;
   font-size: 18px;
   font-family: 'Roboto', "Open Sans", "Verdana", Georgia, Serif;
 }
 
+#media_desc {
+  float: left;
+  width: 95%;
+  margin: 5px;
+  font-size: 12px;
+  font-family: 'Roboto', "Open Sans", "Verdana", Georgia, Serif;
+}
+
 #media_control {
-  position: relative;
+  position: absolute;
+  left: 8px;
+  top: 650px;
   width: 960px;
   height: 60px;
   z-index: 1000;
@@ -195,7 +187,8 @@ radio {
   background-color: #000;
   font-family: 'Roboto', "Open Sans", "Verdana", Georgia, Serif;
   transition: opacity 1s;
-  -webkit-transition:opacity 1s; /* Safari */
+  -webkit-transition: opacity 1s;
+  /* Safari */
 }
 
 #media_control:hover {
@@ -203,7 +196,7 @@ radio {
 }
 
 #play {
-  margin: 10px 0px 10px 10px;
+  margin: 10px 20px 10px 10px;
   float: left;
   width: 65px;
   height: 40px;
@@ -220,7 +213,7 @@ radio {
 
 #pause {
   display: none;
-  margin: 10px 0px 10px 10px;
+  margin: 10px 20px 10px 10px;
   float: left;
   width: 65px;
   height: 40px;
@@ -257,81 +250,38 @@ radio {
   width: 25px;
 }
 
-#progress_bar_container {
-  position: relative;
-  height: 10px;
-  width: var(--progress-bar-width);
-  float: left;
-  margin: 12px 0px 0px 0px;
-}
-
-#progress_bg {
-  cursor: default;
-  float: left;
-  width: var(--progress-bar-width);
-  height: 10px;
-  background-repeat: repeat-x;
-  position: absolute;
-  z-index: 1;
-  background-color: rgba(255, 255, 255, 0.3);
-}
-
-#seekable_window {
-  position: absolute;
-  cursor: pointer;
-  z-index: 2;
-  float: left;
-  width: var(--progress-bar-width);
-  height: 10px;
-  background-repeat: repeat-x;
-  background-color: white;
-}
-
 #progress {
+  margin: 20px 0px 10px -620px;
   cursor: pointer;
   float: left;
   width: 1px;
-  height: 10px;
-  z-index: 3;
+  height: 36px;
+  z-index: 10;
+  background-image: url('../imagefiles/timeline_bg_progress.png');
   background-repeat: repeat-x;
-  position: absolute;
-  background-color: rgba(208, 2, 27, 1.0);
-  padding-left: -2px;
 }
-
-.adMarker {
-  position: absolute;
-  width: 5px;
-  height: 10px;
-  pointer-events: none;
-  background-color: gold;
-}
-
-#unseekable_overlay {
-  position: absolute;
-  cursor: default;
-  float: left;
-  width: 0px;
-  height: 10px;
-  z-index: 4;
-  background-color: rgba(255, 255, 255, 0.7);
 }
 
 #progress_indicator {
   cursor: pointer;
+  margin: 20px 0px 10px -620px;
   float: left;
   draggable: true;
   width: 6px;
-  height: 14px;
-  z-index: 5;
-  margin-top: -2px;
-  position: absolute;
-  background-color: rgba(208, 2, 27, 1.0);
+  height: 36px;
+  z-index: 1000;
+  background-image: url('../imagefiles/timeline_indicator.png');
+  background-repeat: repeat-x;
 }
 
-#progress_indicator:hover {
-  margin-top: -3px;
-  height: 16px;
+#progress_bg {
+  margin: 20px 20px 10px 0px;
+  cursor: pointer;
+  float: left;
+  width: 600px;
+  height: 36px;
+  background-image: url('../imagefiles/timeline_bg_track.png');
+  background-repeat: repeat-x;
 }
 
 #castbutton {
@@ -351,8 +301,8 @@ radio {
 }
 
 #audio_off {
-  float: left;
-  margin: 10px 15px 10px 15px;
+  float: right;
+  margin:10px 4px 10px 0px;
   width: 32px;
   height: 32px;
   display: none;
@@ -360,20 +310,20 @@ radio {
 }
 
 #audio_on {
-  float: left;
+  float: right;
   width: 32px;
   height: 32px;
-  margin: 10px 15px 10px 15px;
+  margin: 10px 4px 10px 0px;
   display: block;
   background-image: url('../imagefiles/audio_on.png');
 }
 
 #audio_bg {
-  float: left;
+  float: right;
   opacity: 0.1;
   width: 41px;
   height: 124px;
-  margin: -115px 0px -10px 8px;
+  margin: -115px 8px -10px 0px;
   display: block;
   background-image: url('../imagefiles/audio_bg.png');
   position: relative;
@@ -381,11 +331,11 @@ radio {
 }
 
 #audio_bg_track {
-  float: left;
+  float: right;
   opacity: 0.0;
   width: 16px;
   height: 100px;
-  margin: -100px 0px -30px 20px;
+  margin: -100px 20px -30px 0px;
   display: block;
   background-image: url('../imagefiles/audio_bg_track.png');
   position: relative;
@@ -393,11 +343,11 @@ radio {
 }
 
 #audio_indicator {
-  float: left;
+  float: right;
   opacity: 0.0;
   width: 16px;
   height: 5px;
-  margin: -50px 0px -30px 20px;
+  margin:-50px 20px -30px 0px;
   display: none;
   background-image: url('../imagefiles/audio_indicator.png');
   position: relative;
@@ -405,11 +355,11 @@ radio {
 }
 
 #audio_bg_level {
-  float: left;
+  float: right;
   opacity: 0.0;
   width: 16px;
   height: 50px;
-  margin: -50px 0px -30px 20px;
+  margin: -50px 20px -30px 0px;
   display: block;
   background-image: url('../imagefiles/audio_bg_level.png');
   position: relative;
@@ -417,7 +367,7 @@ radio {
 }
 
 #fullscreen_expand {
-  float: right;
+  float:right;
   width: 32px;
   height: 32px;
   margin: 10px 20px 10px 0px;
@@ -427,7 +377,7 @@ radio {
 }
 
 #fullscreen_collapse {
-  float: right;
+  float:right;
   width: 32px;
   height: 32px;
   margin: 10px 20px 10px 0px;
@@ -436,72 +386,17 @@ radio {
   cursor: pointer;
 }
 
-#currentTime {
-  position: absolute;
-  left: 140px;
-  top: 22px;
+#duration {
+  float:right;
   color: #fff;
-  width: 92px;
-  height: 20px;
-  margin: 8px 0px 0px 0px;
+  width: 60px;
+  height: 32px;
+  margin: 18px 15px 10px 15px;
   display: block;
 }
 
-#duration {
-  display: flex;
-  justify-content: flex-end;
-  position: absolute;
-  right: 125px;
-  top: 22px;
-  color: #fff;
-  width: 92px;
-  height: 20px;
-  margin: 8px 0px 0px 0px;
-}
-
-#live_indicator {
-  position: absolute;
-  right: 190px;
-  top: 22px;
-  height: 20px;
-  margin: 8px 30px 0px 0px;
-  display: none;
-}
-
-#skip {
-  background-image: url('../imagefiles/skip.png');
-  color: white;
-  cursor: pointer;
-  display: none;
-  opacity: 0.7;
-  left: 875px;
-  top: 575px;
-  width: 55px;
-  height: 19px;
-  font-family: 'Roboto', "Open Sans", "Verdana", Georgia, Serif;
-  margin: -60px 0px 0px 40px;
-  padding: 10px;
-  position: absolute;
-  z-index: 1000;
-}
-
-#skip:hover {
-  background-image: url('../imagefiles/skip_hover.png');
-}
-
-#skip:press {
-  background-image: url('../imagefiles/skip_press.png');
-}
-
-div.imageSub {
-  position: relative;
-  height: 540px;
-}
-
-div.imageSub img {
-  z-index: 1;
-}
-
+div.imageSub { position: relative; }
+div.imageSub img { z-index: 1; }
 div.imageSub div {
   position: absolute;
   left: 0%;
@@ -512,7 +407,7 @@ div.imageSub div {
 
 div.imageSub div.blackbg {
   z-index: 2000;
-  bottom: 75px;
+  bottom: 60px;
   left: 300px;
   width: 400px;
   height: 30px;
@@ -528,7 +423,7 @@ div.imageSub div.blackbg {
 
 div.imageSub div.label {
   z-index: 3000;
-  bottom: 80px;
+  bottom: 60px;
   left: 300px;
   width: 400px;
   height: 30px;
@@ -536,7 +431,6 @@ div.imageSub div.label {
   font-size: 120%;
   display: none;
   padding: 10px;
-  text-align: center;
 }
 
 #carousel {
